<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_horizontal"
              android:orientation="vertical"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:paddingBottom="@dimen/activity_vertical_margin">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/activity_vertical_margin">

        <ImageView
            android:layout_width="@dimen/info_image_size"
            android:layout_height="@dimen/info_image_size"
            android:id="@+id/notice_image"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username_value"
            android:id="@+id/textView9"
            android:layout_weight="1"
            android:textAppearance="?android:attr/textAppearanceSmall"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/username"
                android:layout_gravity="center_horizontal"/>

    </LinearLayout>


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_value"
            android:id="@+id/textView10"
            android:layout_weight="1"
            android:textAppearance="?android:attr/textAppearanceSmall"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/date"
                android:layout_gravity="center_horizontal"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description_value"
            android:id="@+id/textView11"
            android:layout_weight="1"
            android:textAppearance="?android:attr/textAppearanceSmall"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/description"
                android:layout_gravity="center_horizontal"/>
    </LinearLayout>

    <!--<LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:weightSum="6"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/num_existes"
            android:id="@+id/textView7"
            android:layout_weight="2"
            android:textAppearance="?android:attr/textAppearanceSmall"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/votes_yes"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/num_nao_existes"
            android:id="@+id/textView8"
            android:layout_weight="2"
            android:textAppearance="?android:attr/textAppearanceSmall"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/votes_no"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:weightSum="2">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <ImageButton
                android:layout_width="@dimen/votes_button_size"
                android:layout_height="@dimen/votes_button_size"
                android:id="@+id/btn_vote_yes"
                android:clickable="true"
                android:src="@drawable/ic_vote_yes"
                android:tint="@android:color/white"
                android:background="@color/indigo_500"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/existe"
                android:id="@+id/textView5"
                android:layout_gravity="center_horizontal"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <ImageButton
                android:layout_width="@dimen/votes_button_size"
                android:layout_height="@dimen/votes_button_size"
                android:id="@+id/btn_vote_no"
                android:clickable="true"
                android:src="@drawable/ic_vote_no"
                android:tint="@android:color/white"
                android:background="@color/red_500"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/nao_existe"
                android:id="@+id/textView6"
                android:layout_gravity="center_horizontal"/>
        </LinearLayout>

    </LinearLayout>-->

</LinearLayout>
